force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__Account_Unpaid_Payable__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_Unpaid_Payable__c</fullName>
    <inlineHelpText>Report for unpaid payable</inlineHelpText>
    <label>Account Unpaid Payable</label>
    <length>20</length>
    <type>Text</type>
</CustomField>