force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__Account_Unpaid_Receivable__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_Unpaid_Receivable__c</fullName>
    <label>Account Unpaid Receivable</label>
    <length>20</length>
    <type>Text</type>
</CustomField>