force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__BankAccountTodayReceivedPaid__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountTodayReceivedPaid__c</fullName>
    <label>TODAY RECEIVED &amp; PAID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>