force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__Best_Pricing_for_Route__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Best_Pricing_for_Route__c</fullName>
    <label>Best Pricing for Route</label>
    <length>20</length>
    <type>Text</type>
</CustomField>