force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__HBL_Buying_Detail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBL_Buying_Detail__c</fullName>
    <label>HBL  Buying Detail</label>
    <length>20</length>
    <type>Text</type>
</CustomField>