force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__HBL_Duplication_Check__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBL_Duplication_Check__c</fullName>
    <label>HBL Duplication Check</label>
    <length>20</length>
    <type>Text</type>
</CustomField>