force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__HBL_Search_Report__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBL_Search_Report__c</fullName>
    <label>HBL Search Report</label>
    <length>20</length>
    <type>Text</type>
</CustomField>