force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__HBL_Selling_Buying_Payment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HBL_Selling_Buying_Payment__c</fullName>
    <label>HBL Selling Buying Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>