force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__JP24AFRFilingReport__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JP24AFRFilingReport__c</fullName>
    <label>JP24 AFR Filing Report</label>
    <length>100</length>
    <type>Text</type>
</CustomField>