force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__ManifestReportforBL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ManifestReportforBL__c</fullName>
    <label>Manifest Report for B/L</label>
    <length>100</length>
    <type>Text</type>
</CustomField>