force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__MBL_Container_Load_Plan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MBL_Container_Load_Plan__c</fullName>
    <label>MBL Container Load Plan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>