force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__MBL_Profit_Analysis__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MBL_Profit_Analysis__c</fullName>
    <label>MBL Profit Analysis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>