force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__PayrollSummaryReportPrintout__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayrollSummaryReportPrintout__c</fullName>
    <label>PAYROLL SUMMARY REPORT FOR PRINTOUT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>