force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__ProfitAnalysisAfterKickbackDeduct__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitAnalysisAfterKickbackDeduct__c</fullName>
    <label>PROFIT ANALYSIS AFTER KICKBACK DEDUCT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>