force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__ProfitLossSheet__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitLossSheet__c</fullName>
    <label>PROFIT LOSS SHEET</label>
    <length>30</length>
    <type>Text</type>
</CustomField>