force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__QuoteProfitAnalysis__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QuoteProfitAnalysis__c</fullName>
    <label>QUOTE PROFIT ANALYSIS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>