force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__REPORT_FOR_LOCAL_AMOUNT_PAID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__REPORT_FOR_LOCAL_AMOUNT_PAID__c</fullName>
    <label>REPORT FOR LOCAL AMOUNT PAID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>