force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__ShipmentOrderSearch__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShipmentOrderSearch__c</fullName>
    <label>SHIPMENT ORDER SEARCH</label>
    <length>20</length>
    <type>Text</type>
</CustomField>