force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__VAT_Profit_Analysis__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VAT_Profit_Analysis__c</fullName>
    <label>VAT INVOICE PROFIT ANALYSIS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>