force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__VAT_PROFIT_ANALYSIS_PER_FORWARDING__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VAT_PROFIT_ANALYSIS_PER_FORWARDING__c</fullName>
    <label>VAT PROFIT ANALYSIS PER FORWARDING</label>
    <length>20</length>
    <type>Text</type>
</CustomField>