force-app/main/default/objects/clofor_com_cfs__Report_Mappings__c/fields/clofor_com_cfs__WorkOrderProfitAnalysis__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkOrderProfitAnalysis__c</fullName>
    <label>WORK ORDER PROFIT ANALYSIS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>